fix: yt-dlp does not run on song fail
